// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleBar /> should adopt optional props 1`] = `
<styled.div>
  <Toggle
    handleClick={[Function]}
    isActive={true}
    isDisabled={false}
  >
    Notes
  </Toggle>
  <Toggle
    handleClick={[Function]}
    isActive={false}
    isDisabled={false}
  >
    Info: 
    High
  </Toggle>
  <Toggle
    handleClick={[Function]}
    isActive={true}
    isDisabled={false}
  >
    New Synonym
  </Toggle>
</styled.div>
`;

exports[`<ToggleBar /> should match baseline snapshot 1`] = `
<styled.div>
  <Toggle
    handleClick={[Function]}
    isActive={false}
    isDisabled={true}
  >
    Notes
  </Toggle>
  <Toggle
    handleClick={[Function]}
    isActive={false}
    isDisabled={true}
  >
    Info: 
    Low
  </Toggle>
  <Toggle
    handleClick={[Function]}
    isActive={false}
    isDisabled={true}
  >
    New Synonym
  </Toggle>
</styled.div>
`;
